--- a/BitEngine/admin.html
+++ b/BitEngine/admin.html
@@ -33,7 +33,7 @@
             <button type="submit"><i class="fas fa-door-open"></i> Sign in</button>
           </form>
 
-          <h2><a href="/BitEngine/index.html" class="links">Guard Login</a></h2>
+          <h2><a href="index.html" class="links">Guard Login</a></h2>
           <div class="row" >
             <div class="col-1"></div>
             <div class="col-5">
@@ -41,7 +41,7 @@
             </div>
               <h2 class="links pipe" style="margin-top: 0px;">|</h2>
             <div class="col-5" >
-              <h1><a href="#" class="links help" style="margin-top: 0px;">Help?</a></h1>
+              <h1><a href="#" class="links help" style="margin-top: 0px;">Need Help?</a></h1>
             </div>
           </div>
           
